# hogeutilrs

./: Cargo.toml  README.md  input.txt
src/: files.rs  lib.rs  main.rs  rsmate.rs
